--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                     <th>Typ</th>
                     <th>Datum</th>
                     <th>Endpreis</th>
+                    <th>Status</th>
+                    <th>Aktion</th>
                 </tr>
             </thead>
             <tbody>
